helm-template-output.yaml
---
# Source: productpage/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: product-page-svc
  labels:
    app: productpage
    chart: productpage-0.1.0
    release: RELEASE-NAME
    heritage: Tiller
spec:
  type: 
  ports:
    - port: 9080
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app: productpage
    release: RELEASE-NAME

---
# Source: productpage/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: RELEASE-NAME-productpage
  labels:
    app: productpage
    canary: "false"
    chart: productpage-0.1.0
    release: RELEASE-NAME
    heritage: Tiller
spec:
  replicas: 2
  selector:
    matchLabels:
      app: productpage
      canary: "false"
      release: RELEASE-NAME
  template:
    metadata:
      labels:
        app: productpage
        canary: "false"
        release: RELEASE-NAME
    spec:
      containers:
        - name: productpage
          image: "myacrepo.azurecr.io/bookinfo-canary/productpage:76"
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 9080
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /
              port: http
          readinessProbe:
            httpGet:
              path: /
              port: http

---
# Source: productpage/templates/deploymentcanary.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: RELEASE-NAME-productpagecanary
  labels:
    app: productpage
    canary: "true"
    chart: productpage-0.1.0
    release: RELEASE-NAME
    heritage: Tiller
spec:
  replicas: 2
  selector:
    matchLabels:
      app: productpage
      canary: "true"
      release: RELEASE-NAME
  template:
    metadata:
      labels:
        app: productpage
        canary: "true"
        release: RELEASE-NAME
    spec:
      containers:
        - name: productpagecanary
          image: "myacrepo.azurecr.io/bookinfo-canary/productpage:83"
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 9080
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /
              port: http
          readinessProbe:
            httpGet:
              path: /
              port: http

---
# Source: productpage/templates/istioDestinationRule.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: product-page-destination-rule
  labels:
    chart: productpage-0.1.0
    release: RELEASE-NAME
spec:
  host: product-page-svc.bookinfo-k8s-helm-istio-canary.svc.cluster.local
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
  subsets:
  - name: production
    labels:
      canary: "false"
  - name: canary
    labels:
      canary: "true"

---
# Source: productpage/templates/istioGateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: product-page
  labels:
    chart: productpage-0.1.0
    release: RELEASE-NAME
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
# Source: productpage/templates/istioVirtualService.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: product-page-virtual-service
  labels:
    chart: productpage-0.1.0
    release: RELEASE-NAME
spec:
  hosts:
  - product-page-svc.bookinfo-k8s-helm-istio-canary.svc.cluster.local
  gateways:
  - product-page
  http:
  - route:
    - destination:
        host: product-page-svc.bookinfo-k8s-helm-istio-canary.svc.cluster.local
        subset: production
        port:
          number: 9080
      weight: 75
    - destination:
        host: product-page-svc.bookinfo-k8s-helm-istio-canary.svc.cluster.local
        subset: canary
        port:
          number: 9080
      weight: 25
